Added additional components to index.js

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,4 +40,22 @@ body {
   .input--submit-button {
     @apply uppercase tracking-widest text-3xl
   }
+
+  .progress--container {
+    @apply flex flex-col items-stretch content-center border-[.5px] border-gray-900
+  }
+  .progress--manifest {
+    @apply flex flex-col text-center items-stretch content-center border-[.5px] border-gray-900;
+  }
+  .progress--attempted-words {
+
+    @apply break-words grid grid-cols-3  flex-grow text-center items-center content-center border-[.5px] border-gray-900;
+  }
+  .new-game--container {
+    @apply flex flex-row content-center justify-center border-[.5px] border-gray-900 py-5
+  }
+
+  .new-game--button {
+    @apply h-[50px] border-[.5px] border-gray-900 flex flex-row content-center items-center p-5;
+  }
 }
